# project-of-machatronics-system-ros2

./: .gitignore  realism_upgrade_changelog.md  run1.csv
logs/: analyze_mppi.py  cmdvel_prefer_off.txt  cmdvel_prefer_on.txt  measure_amcl.py  measure_rotation_error.py  measure_safety.py  rotation_error_log.csv  safety_log.csv
maps/: keepout_mask.pgm  keepout_mask.yaml  warehouse_v6_double_map.pgm  warehouse_v6_double_map.yaml  warehouse_v6_map.pgm  warehouse_v6_map.yaml  warehouse_v6_map1.pgm  warehouse_v6_map1.yaml
src/amr_bringup/: CMakeLists.txt  package.xml
src/amr_bringup/config/: default.rviz  mecanum_controllers.yaml
src/amr_bringup/launch/: bringup.launch.py
src/amr_description/: CMakeLists.txt  package.xml
src/amr_description/urdf/: amr_robot.urdf.xacro
src/amr_navigation/: CMakeLists.txt  package.xml
src/amr_navigation/config/: nav2_params.yaml
src/amr_navigation/launch/: navigation.launch.py
src/amr_navigation/scripts/: analyze_nav2_test_csv.py  generate_keepout_mask.py  nav2_12point_benchmark.py  nav2_random_pose_test.py
src/amr_safety/: CMakeLists.txt  package.xml
src/amr_safety/amr_safety/: __init__.py
src/amr_safety/launch/: safety.launch.py
src/amr_safety/scripts/: collision_warning_node.py
src/amr_simulation/: CMakeLists.txt  package.xml
src/amr_simulation/launch/: gazebo.launch.py
src/amr_simulation/worlds/: warehouse_v5.world  warehouse_v6_double.world
src/amr_slam/: CMakeLists.txt  package.xml
src/amr_slam/config/: slam_params.yaml
src/amr_slam/launch/: slam.launch.py
src/amr_teleop/: CMakeLists.txt  package.xml
src/amr_teleop/launch/: teleop.launch.py
tests/: run_tests.sh
tests/integration/: test_cmd_vel_pipeline.sh  test_nav_goal.py  test_slam_quality.sh
tests/node/: test_collision_warning_node.py
tests/unit/: test_classify.py  test_directional_zones.py  test_speed_scaling.py
tools/: csv_to_summary.py  nav_data_collector.py  plot_nav_results.m  result_50_points.csv  sample_data.csv  test_map_50pts.py
