<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_description</name>
  <version>5.0.0</version>
  <description>AMR Mecanum-wheel robot URDF/Xacro description (ver5.0)</description>
  <maintainer email="ndthien994@gmail.com">AMR Developer</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <!-- FIX: da bo cac exec_depend ros2_control (gazebo_ros2_control,
       ros2_controllers, joint_state_broadcaster, controller_manager) -
       khong dung den vi robot dieu khien qua libgazebo_ros_planar_move,
       khong qua ros2_control. -->
  <export><build_type>ament_cmake</build_type></export>
</package>
