<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_slam</name>
  <version>5.0.0</version>
  <description>AMR SLAM Toolbox config (ver5.0)</description>
  <maintainer email="ndthien994@gmail.com">AMR Developer</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
